[tool.poetry]
name = "topic-modelling-hotel-reviews-spain"
version = "0.1.0"
description = "AboutLDA topic modelling implementation of hotel reviews by pre-covid, covid and post-covid era to see differences in hotel reviews"
authors = ["Sam <ssamozturk@gmail.com>"]
readme = "README.md"
packages = [{ include = "topic_modelling_hotel_reviews_spain" }]

[tool.poetry.dependencies]
python = "3.9.16"
argcomplete = "3.0.8"
asttokens = "2.2.1"
backcall = "0.2.0"
backports.functools-lru-cache = "1.6.4"
blis = "0.7.9"
bokeh = "3.1.1"
catalogue = "2.0.8"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
colorama = "0.4.6"
confection = "0.0.4"
contourpy = "1.0.7"
cycler = "0.11.0"
cymem = "2.0.7"
debugpy = "1.5.1"
decorator = "5.1.1"
en-core-web-sm = "3.5.0"
executing = "1.2.0"
fonttools = "4.39.4"
gensim = "3.8.0"
idna = "3.4"
importlib-metadata = "6.6.0"
importlib-resources = "5.12.0"
ipykernel = "6.15.0"
ipython = "8.13.2"
jedi = "0.18.2"
Jinja2 = "3.1.2"
joblib = "1.2.0"
jupyter_client = "8.2.0"
jupyter_core = "5.3.0"
kiwisolver = "1.4.4"
langcodes = "3.3.0"
MarkupSafe = "2.1.2"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
murmurhash = "1.0.9"
nest-asyncio = "1.5.6"
nltk = "3.8.1"
numpy = "1.24.3"
packaging = "23.1"
pandas = "2.0.1"
parso = "0.8.3"
pathy = "0.10.1"
pickleshare = "0.7.5"
Pillow = "9.5.0"
pip = "23.0.1"
pipx = "1.2.0"
platformdirs = "3.5.1"
preshed = "3.0.8"
prompt-toolkit = "3.0.38"
psutil = "5.9.0"
pure-eval = "0.2.2"
pydantic = "1.10.7"
Pygments = "2.15.1"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2023.3"
pywin32 = "305.1"
PyYAML = "6.0"
pyzmq = "25.0.2"
regex = "2023.5.5"
requests = "2.30.0"
scipy = "1.10.1"
setuptools = "66.0.0"
six = "1.16.0"
smart-open = "6.3.0"
spacy = "3.5.3"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.4"
srsly = "2.4.6"
stack-data = "0.6.2"
thinc = "8.1.10"
tornado = "6.3.2"
tqdm = "4.65.0"
traitlets = "5.9.0"
typer = "0.7.0"
typing_extensions = "4.5.0"
tzdata = "2023.3"
urllib3 = "2.0.2"
userpath = "1.8.0"
wasabi = "1.1.1"
wcwidth = "0.2.6"
wheel = "0.38.4"
wordcloud = "1.9.2"
xyzservices = "2023.5.0"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
